MTGで話したAPI設計の変更 (#122)
* change: OpenAPIにfurniture/personal_productsを追加

* add: OpenAPIの定義からbackendコードを自動生成
