# backend/src/openapi_server/apis/furniture_api.py
@@ -103,10 +103,26 @@ async def furniture_furniture_id_get(
 )
 async def furniture_get(
     user_id: int = Query(None, description="", alias="user_id"),
+    category: int = Query(None, description="カテゴリコード, URL(https://github.com/naka-c1024/Pasha-niture/blob/main/client/app/lib/Domain/constants.dart)", alias="category"),
     keyword: str = Query(None, description="検索キーワード, スペース区切りで複数指定可", alias="keyword"),
     db: AsyncSession = Depends(get_db),
 ) -> FurnitureListResponse:
     return await impl.furniture_get(user_id, keyword, db)
+
+
+@router.get(
+    "/furniture/personal_products",
+    responses={
+        200: {"model": FurnitureListResponse, "description": "Furniture list retrieved successfully"},
+    },
+    tags=["Furniture"],
+    summary="Get list of Personal furniture by user_id",
+    response_model_by_alias=True,
+)
+async def furniture_personal_products_get(
+    user_id: int = Query(None, description="", alias="user_id"),
+) -> FurnitureListResponse:
+    ...
 
 
 @router.post(
